--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sphinxcontrib-spelling==8.0.0
-staticfg 
+staticfg @ file:///E:/staticfg
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.7
